Changed I to F in index file

--- a/TDD-Intro/00_Hello/index.html
+++ b/TDD-Intro/00_Hello/index.html
@@ -244,7 +244,7 @@ internal class Functions
             (capitalization <b>
                 is very
                 important
-            </b> in C#, so make sure the "I" is capitalized),
+            </b> in C#, so make sure the "F" in Functions is capitalized),
             <br /><br />
         </li>
         <li>
